testsuite/tests/rename/should_compile/T22067.hs
{-# LANGUAGE TemplateHaskell #-}
module TTT where

a :: ()
a = let () = () in ()

b :: ()
b = let $([p|()|]) = () in ()

