testsuite/tests/rename/should_fail/T6060.hs
{-# LANGUAGE ParallelListComp #-}

module T6060 where

foo = do let bad = [True | x <- [] | y <- []]
